--- a/NeuroApp/Storyboard/Tabbar.storyboard
+++ b/NeuroApp/Storyboard/Tabbar.storyboard
@@ -17,21 +17,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="0as-hR-sWi" kind="relationship" relationship="viewControllers" id="WBY-5C-IY8"/>
+                        <segue destination="A7e-Dv-CLv" kind="relationship" relationship="viewControllers" id="jtb-Zq-MaO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2NQ-lL-hwb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-253" y="58"/>
         </scene>
-        <!--HomeViewController-->
+        <!--Home-->
         <scene sceneID="BqS-3J-lfU">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="HomeViewController" storyboardName="Home" referencedIdentifier="HomeViewController" id="0as-hR-sWi" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="HomeViewController" storyboardName="Home" id="0as-hR-sWi" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="zUy-WU-zFI"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIu-4O-xLB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="427" y="58"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="cj3-2e-QoX">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" id="A7e-Dv-CLv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qHy-hk-oXK"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N2W-ny-lIe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="429" y="111"/>
         </scene>
     </scenes>
 </document>
